<resources>
    <string name="dummy">웅대한 설산에서 무엇을 있으며, 이것을 불어 속에 인류의 철환하였는가? 것이 현저하게 타오르고 인생에 같이, 위하여서 들어 부패뿐이다. 바로 더운지라 피가 남는 이것이다. 것이 그들의 갑 이상의 투명하되 있다. 유소년에게서 바이며, 우리의 이것을 운다. 이 충분히 불어 청춘은 피부가 그들은 싶이 산야에 사막이다. 이상의 착목한는 주는 싹이 끓는다. 싹이 아니더면, 쓸쓸한 천자만홍이 위하여서 광야에서 기쁘며, 것이다. 없으면 그들을 속잎나고, 어디 것이다.</string>
    <string name="confirm">확인</string>
    <string name="require_login">몰디 로그인이 필요합니다</string>
    <string name="start">시작하기</string>
    <string name="report_status_receiving">접수중</string>
    <string name="report_status_accepted">접수 완료</string>
    <string name="report_status_found">제거 완료</string>
    <string name="report_status_clean">검사 완료</string>
    <string name="report_status_result">접수 결과</string>
    <string name="feed_date_recent">최신 피드 업데이트 날짜</string>
    <string name="feed_date_location">최단거리 피드 업데이트 날짜</string>
    <string name="dialog_change_feed_state">신고 상태를 변경하시겠습니까?</string>
    <string name="feed_detail">신고 상세 내역</string>
    <string name="deny_report">신고거절</string>
    <string name="cancel_report">신고취소</string>
    <string name="cancel_message">신고를 취소하시겠습니까?</string>
    <string name="deny_message">신고를 거절하시겠습니까?</string>
    <string name="report_message_receiving">신고해 주셔서 감사합니다. 운영자가 신고 내용을 확인중입니다</string>
    <string name="report_message_accepted">신고하신 내용을 운영자가 관할 지역에 전달하였습니다!</string>
    <string name="report_message_found">접수 결과 몰래카메라로 판정되어 제거하였습니다!</string>
    <string name="report_message_clean">점검을 통해 몰래카메라가 없는 안전지역임을 확인했습니다.</string>
    <string name="report_message_denied">사진을 인식할 수 없거나 위치를\n 확인할 수 없습니다. 다시 신고해주세요.</string>
    <string name="snackbar_require_signin">몰디 로그인이 필요합니다!</string>
    <string name="snackbar_signed_out">계정 로그아웃 되었습니다.</string>
    <string name="signin">로그인</string>
    <string name="signout">로그아웃</string>
    <string name="signin_google">구글 로그인 되었습니다.</string>
    <string name="signin_facebook">페이스북 로그인 되었습니다.</string>
    <string name="dialog_title_signout">로그아웃</string>
    <string name="dialog_msg_signout">로그아웃하시겠습니까?</string>
    <string name="inquiry">문의하기</string>
    <string name="my_report">신고</string>
    <string name="mycomment">댓글</string>
    <string name="my_scrap">스크랩</string>
    <string name="myscrap">내 스크랩</string>
    <string name="myreport">내 신고내역</string>
    <string name="inquire">문의하기</string>
    <string name="snackbar_invalid_email">유효한 이메일이 아닙니다</string>
    <string name="snackbar_inquire_accepted">문의가 접수됐습니다. 감사합니다</string>
    <string name="snackbar_content_absent">내용이 없습니다.</string>
    <string name="email_hint"><font size="14">이메일 입력</font></string>
    <string name="faq">자주 묻는 질문</string>
    <string name="faq_content">문의 내용</string>
    <string name="faq_submit">전송하기</string>
    <string name="faq_respond_email">답변 받을 이메일</string>
    <string name="faq_q_1">Q. 내가 쓴 글을 삭제하고 싶을 때 어떻게 하나요?</string>
    <string name="faq_q_2">Q. 회원탈퇴는 어떻게 하나요?</string>
    <string name="faq_q_3">Q. 제가 쓴 글은 어디 가야 볼 수 있나요?</string>
    <string name="faq_q_4">Q. 개인정보를 바꾸려면 어떻게 해야하나요?</string>
    <string name="faq_q_5">Q. 탈퇴하고 싶습니다.</string>
    <string name="faq_a_1">마이페이지에 들어가셔서 내가 쓴 글을 확인하신 후 내 프로필 옆의 … 버튼을 누르시면 삭제가 가능합니다. 한번 삭제하시면 다시 복구하기 어려우므로 신중한 판단 부탁드립니다. 내가 쓴 댓글 역시 마찬가지입니다.</string>
    <string name="faq_a_2">탈퇴 \n 대답대답</string>
    <string name="faq_a_3">내가쓴글 \n 대답대답</string>
    <string name="faq_a_4">개인정보 \n 대답대답</string>
    <string name="faq_a_5">탈퇴 \n 탈퇴</string>
    <string name="my_comment">내가 쓴 댓글</string>
    <string name="reported_comment">신고된 댓글</string>
    <string name="dialog_title_change_status">댓글 상태 변경</string>
    <string name="dialog_msg_delete_comment">댓글 상태를 변경하시겠습니까?</string>
    <string name="delete_comment">댓글 삭제</string>
    <string name="refuse_report">신고 거절</string>
    <string name="dialog_report_comment_title">댓글 신고</string>
    <string name="dialog_report_comment_msg">댓글을 신고하시겠습니까?</string>
    <string name="settings">설정</string>
    <string name="settings_favorite_push">즐겨찾기 주변 피드 생성 푸쉬알람</string>
    <string name="settings_feed_change_push">신고한 피드 상태 변경 푸쉬알람</string>
    <string name="producer">만든이</string>
    <string name="producer_name">상호명</string>
    <string name="producer_name_content">(주)라임프렌즈</string>
    <string name="producer_ceo">대표</string>
    <string name="producer_ceo_content">정영찬</string>
    <string name="producer_project">[이유 있는 프로젝트 2기]</string>
    <string name="producer_plan">기획</string>
    <string name="producer_plan_content">김주현, 최로사, 이기정, 정영찬, 유지현</string>
    <string name="producer_design">디자인</string>
    <string name="producer_design_content">김주현</string>
    <string name="producer_developer">개발</string>
    <string name="producer_developer_content">이기정, 최진성, 함성호, 함은정, 주해연</string>
    <string name="producer_developer_github">★이기정 깃헙주소★</string>
    <string name="producer_developer_github_content">https://github.com/SODA1127</string>
    <string name="opensource_license">오픈소스 라이센스</string>
    <string name="opensource_licence_content">
        Google Maps \nhttps://developers.google.com/android/guides/setup \n
        Google Location \nhttps://developers.google.com/android/guides/setup \n
        Google Auth \nhttps://developers.google.com/android/guides/setup \n
        Google Map Utils \nhttps://developers.google.com/maps/documentation/android-sdk/utility \n
        Google Gson \nhttps://github.com/google/gson \n
        Firebase \nhttps://firebase.google.com/docs/android/setup?hl=ko \n\
        Firebase Firestore \nhttps://firebase.google.com/docs/android/setup?hl=ko \n
        Firebase Messaging \nhttps://firebase.google.com/docs/android/setup?hl=ko \n
        Firebase Jobdispatcher \nhttps://github.com/firebase/firebase-jobdispatcher-android \n
        Firebase UI Auth \nhttps://firebase.google.com/docs/auth/android/firebaseui?hl=ko \n
        Firebase Auth \nhttps://firebase.google.com/docs/auth/android/start \n
        Butterknife \nhttp://jakewharton.github.io/butterknife \n
        Glide \nhttps://github.com/bumptech/glide \n
        Glide Transformer \nhttps://github.com/wasabeef/glide-transformations \n
        Pm10 Indicator \nhttps://github.com/PM-10/SimpleIndicator \n
        CircleImageView \nhttps://github.com/hdodenhof/CircleImageView \n
        TedPermission \nhttps://github.com/ParkSangGwon/TedPermission \n
        OkHttp \nhttp://square.github.io/okhttp \n
        Logging Interceptor \nhttps://github.com/square/okhttp/tree/master/okhttp-logging-interceptor \n
        Retrofit2 \nhttps://square.github.io/retrofit \n
        Retrofit2 Gson Converter \nhttps://github.com/square/retrofit/tree/master/retrofit-converters/gson \n
        Facebook \nhttps://developers.facebook.com/docs/android/getting-started \
        Constraint Layout \nhttps://developer.android.com/training/constraint-layout \n
        RecyclerView \nhttps://developer.android.com/topic/libraries/support-library/features?hl=ko \n
        CardView \nhttps://developer.android.com/topic/libraries/support-library/packages \n
        Android Support Annotations \nhttps://developer.android.com/studio/write/annotations?hl=ko \n
    </string>
    <string name="version_info">버전 정보</string>
    <string name="terms">이용약관</string>
    <string name="terms_content_1">
        몰디 서비스 이용약관 \n\n

        제 1 조 (목적) \n
        본 약관은 (주)라임프렌즈(이하 "회사") 가 제공하는 회사와 회사 관련 제반 서비스의 이용과 관련하여 회사와 회원과의 권리, 의무 및 책임 사항, 기타 필요한 사항을 규정함을 목적으로 합니다.
    </string>
    <string name="terms_content_2">
        제 2 조 (용어의 정의) \n
        본 약관에서 사용하는 용어의 정의는 다음과 같습니다. \n
        (1) "서비스"란 접속 가능한 유·무선 단말기의 종류와는 상관없이 이용 가능한 "회사"가 제공하는 모든 "서비스"를 의미합니다. \n
        (2) "이용자"란 회사 서비스에 접속하여, 이 약관에 따라 회사가 제공하는 서비스를 이용하는 회원과 비회원을 의미합니다. \n
        (3) "회원"이란 회사와 서비스 이용계약을 체결한 개인 또는 기업을 의미합니다. \n
        (4) "ID"란 회원식별과 회원의 서비스 이용을 위하여 회원이 선정하고 회사가 승인하는 문자와 숫자의 조합을 의미합니다. \n
        (5) "비밀번호"란 회원이 부여받은 아이디와 일치하는 회원임을 확인하고 회원의 비밀 보호를 위해 회원 자신이 설정한 문자와 숫자의 조합을 의미합니다. \n
        (6) "탈퇴"란 회사 또는 회원이 서비스 개통 후 이용계약을 해약하는 것을 의미합니다. \n
        (7) "콘텐츠"란 회사, 에디터 또는 회원이 동영상, 이미지, 음원, 텍스트 등을 편집하여 회사가 운영하는 서비스에 업로드 할 목적으로 제작되는 창작물을 의미합니다. \n
        (8) ‘에디터’란 회사와 고용계약, 업무위탁계약 또는 업무제휴계약 등을 체결하여 서비스에 업로드 할 목적으로 콘텐츠를 제작 및 공급하는 개인 또는 기업을 의미합니다. \n
        이 약관에서 사용하는 용어의 정의는 제1항에서 정하는 것을 제외하고는 관계 법령 및 서비스별 안내에서 정하는 바에 의합니다.
    </string>
    <string name="terms_content_3">
        제 3 조 (이용약관의 효력 및 변경) \n
        본 약관은 (주)라임프렌즈(이하 "회사") 가 제공하는 온라인상의 인터넷 서비스(이하 "서비스")의 이용약관으로 이용자에게 공시함으로써 효력이 발생합니다.
        회사는 합리적인 사유가 발생할 경우 "약관의 규제에 관한 법률", "정보통신망 이용촉진 및 정보보호 등에 관한 법률"(이하 "정보통신망법")" 등의 관련 법령에 위배되지 않는 범위 안에서 약관을 개정할 수 있습니다. 개정된 약관에 이용자의 권리 또는 의무 등 중요한 규정의 개정이 있는 경우 사전에 공지합니다. 다만, 회원에게 불리한 약관의 개정 경우에는 전자우편, 전자쪽지, 로그인 시 동의 창 등의 전자적 수단을 통해 따로 명확히 통지하도록 합니다. 회사가 전항에 따라 개정약관을 공지 또는 통지하면서 회원에게 7일 기간 내에 의사표시를 하지 않으면 의사표시가 표명된 것으로 본다는 뜻을 명확하게 공지 또는 통지하였음에도 회원이 명시적으로 거부의 의사표시를 하지 아니한 경우 회원이 개정약관에 동의한 것으로 봅니다. 이 약관에 동의하는 것은 정기적으로 웹을 방문하여 약관의 변경사항을 확인하는 것에 동의함을 의미합니다. 변경된 약관에 대한 정보를 알지 못해 발생하는 이용자의 피해는 회사에서 책임지지 않습니다. 회원이 변경된 약관에 동의하지 않으면 회사는 해당 회원의 탈퇴(해지)를 요청할 수 있습니다.
    </string>
    <string name="terms_content_4">
        제 4조 (약관 외 사항에 대한 준칙) \n
        이 약관은 회사가 제공하는 개별서비스에 관한 이용안내(이하 서비스별 안내라 합니다)와 함께 적용합니다.
        이 약관에서 정하지 아니한 사항과 이 약관의 해석에 관하여는 온라인 디지털콘텐츠산업 발전법, 전자상거래 등에서의 소비자보호에 관한 법률, 약관의 규제에 관한 법률, 정보통신부 장관이 정하는 디지털콘텐츠 이용자 보호 지침, 기타 관계 법령 또는 상 관례에 따릅니다.
    </string>
    <string name="terms_content_5">
        제 5 조 (서비스 이용계약 체결)\n
        이용계약은 회원이 되고자 하는 자가 약관의 내용에 대하여 동의를 한 다음 회원가입신청을 하고 회사가 이러한 신청에 대하여 승낙함으로써 체결됩니다.
        회사는 서비스 제공에 필요하다고 판단하는 경우 이용자에게 필요정보의 제공을 요청할 수 있습니다.
        모든 회원은 반드시 이용자 본인의 e-mail 또는 회원가입에 필요한 정보를 제공하여야만 서비스를 이용할 수 있으며, 정확한 정보로 등록하지 않은 이용자는 일체의 권리를 주장할 수 없습니다.
        회원가입은 본인과 연락 가능한 정확한 정보로 가입해야 하며, 회사는 게시물 관리 등을 위한 정보 확인 조치를 할 수 있습니다.
        타인의 정보를 도용하여 이용신청을 한 회원의 모든 ID는 삭제되며 관계 법령에 따라 처벌을 받을 수 있습니다.
    </string>
    <string name="terms_content_6">
        제 6조 (이용신청의 승낙과 제한)\n
        회사는 제5조의 규정에 따른 이용신청고객에 대하여 업무 수행상 또는 기술상 지장이 없는 경우에 원칙적으로 접수순서에 따라 서비스 이용을 승낙합니다.
        회사는 아래 사항에 해당하는 경우에 대해서 승낙하지 않거나 거부할 수 있습니다. \n
        (1) 이용신청고객이 이 약관에 의하여 이전에 회원자격을 상실한 적이 있는 경우 (단, 회사의 재가입 승낙을 얻은 경우에는 예외로 함) \n
        (2) 타인의 정보를 이용하여 신청한 경우 \n
        (3) 회원가입 절차에 있어 내용을 허위로 기재한 경우 \n
        (4) 사회의 안녕과 질서, 미풍양속을 저해할 목적으로 신청한 경우 \n
        (5) 부정한 용도로 본 서비스를 이용하고자 하는 경우 \n
        (6) 영리를 추구할 목적으로 본 서비스를 이용하고자 하는 경우 \n
        (7) 기타 규정한 제반 사항을 위반하며 신청하는 경우 \n
        회사는 서비스 이용신청이 다음 각호에 해당하는 경우에는 그 신청에 대하여 승낙 제한 사유가 해소될 때까지 승낙을 유보할 수 있습니다. \n
        (1) 회사가 설비의 여유가 없는 경우 \n
        (2) 회사의 기술상 지장이 있는 경우 \n
        (3) 기타 회사의 귀책사유로 이용승낙이 곤란한 경우 \n
        회사는 회원에 대하여 "영화 및 비디오물의 진흥에 관한 법률" 및 "청소년 보호법" 등에 따른 등급 및 연령 준수를 위해 이용제한이나 등급별 제한을 할 수 있습니다.
    </string>
    <string name="terms_content_7">
        제 7조 (개인정보 보호) \n
        회사는 관계 법령이 정하는 바에 따라 이용자 등록정보를 포함한 이용자의 개인정보를 보호하기 위해 노력합니다.
        이용자 개인정보의 보호 및 사용에 대해서는 관련법령 및 회사의 개인정보 취급방침이 적용됩니다.
        단, 회사의 공식 사이트 이외의 웹에서 링크된 사이트에서는 회사의 개인정보 취급방침이 적용되지 않습니다.
        또한, 회사는 이용자의 귀책사유로 인해 노출된 정보에 대해서 일체의 책임을 지지 않습니다.
    </string>
    <string name="info_recent_1">시계 몰카 설명</string>
    <string name="info_recent_2">안경 몰카 설명</string>
    <string name="info_recent_3">볼펜 몰카 설명</string>
    <string name="info_recent_4">차키 몰카 설명</string>
    <string name="info_recent_5">기타 휴대용 몰카 설명</string>
    <string name="info_recent_6">인테리어 몰카 설명</string>
    <string name="favorite_address"><font size="10">즐겨찾기 주소</font></string>
    <string name="favorite_detail_address"><font size="10">상세 주소</font></string>
    <string name="favorite_save">저장</string>
    <string name="login_skip">로그인 건너뛰기</string>
    <string name="login_google">구글로 로그인하기</string>
    <string name="login_facebook">페이스북으로 로그인하기</string>
    <string name="my_favorite">즐겨찾기</string>
</resources>