<?xml version="1.0" encoding="utf-8"?>
<!-- TODO 폰트 사이즈, 크기, 색상 공통으로 적용할 것 -->
<!-- TODO 각종 색깔 공통으로 관리할 것 - 배경 등 -->
<!-- TODO 아이콘 크기 공통 조절, 위젯 스타일 적용 -->
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ffffff"
            android:gravity="center"
            android:padding="8dp">

            <TextView
                android:id="@+id/txt_new_molca_01"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginBottom="24dp"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="24dp"
                android:elegantTextHeight="true"
                android:gravity="center"
                android:textColor="#000000"
                android:textSize="12sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/img_new_molca_01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txt_new_molca_01" />

            <TextView
                android:id="@+id/txt_new_molca_02"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/img_new_molca_01"
                android:layout_marginBottom="16dp"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="16dp"
                android:text="@string/info_recent_1"
                android:textColor="#000000"
                android:textSize="12sp" />

            <ImageView
                android:id="@+id/img_new_molca_02"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txt_new_molca_02" />

            <TextView
                android:id="@+id/txt_new_molca_03"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/img_new_molca_02"
                android:layout_marginBottom="16dp"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="16dp"
                android:text="@string/info_recent_2"
                android:textColor="#000000"
                android:textSize="12sp" />

            <ImageView
                android:id="@+id/img_new_molca_03"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txt_new_molca_03" />

            <TextView
                android:id="@+id/txt_new_molca_04"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/img_new_molca_03"
                android:layout_marginBottom="16dp"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="16dp"
                android:text="@string/info_recent_3"
                android:textColor="#000000"
                android:textSize="12sp" />

            <ImageView
                android:id="@+id/img_new_molca_04"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txt_new_molca_04" />

            <TextView
                android:id="@+id/txt_new_molca_05"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/img_new_molca_04"
                android:layout_marginBottom="16dp"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="16dp"
                android:text="@string/info_recent_4"
                android:textColor="#000000"
                android:textSize="12sp" />

            <ImageView
                android:id="@+id/img_new_molca_05"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txt_new_molca_05" />

            <TextView
                android:id="@+id/txt_new_molca_06"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/img_new_molca_05"
                android:layout_marginBottom="16dp"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="16dp"
                android:text="@string/info_recent_5"
                android:textColor="#000000"
                android:textSize="12sp" />

            <ImageView
                android:id="@+id/img_new_molca_06"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txt_new_molca_06" />

            <ImageView
                android:id="@+id/img_new_molca_07"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/img_new_molca_06" />

            <ImageView
                android:id="@+id/img_new_molca_08"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/img_new_molca_07" />

            <TextView
                android:id="@+id/txt_new_molca_07"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/img_new_molca_08"
                android:layout_marginBottom="16dp"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="16dp"
                android:text="@string/info_recent_6"
                android:textColor="#000000"
                android:textSize="12sp" />

        </RelativeLayout>

    </ScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/btn_molca_report_call"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="24dp"
        android:layout_marginEnd="24dp"
        app:fabSize="normal"
        app:srcCompat="@android:drawable/stat_sys_phone_call" />

</RelativeLayout>
