<?xml version="1.0" encoding="utf-8"?>
<!-- TODO 폰트 사이즈, 크기, 색상 공통으로 적용할 것 -->
<!-- TODO 각종 색깔 공통으로 관리할 것 - 배경 등 -->
<!-- TODO 아이콘 크기 공통 조절, 위젯 스타일 적용 -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorBG"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:gravity="center_vertical"
        android:paddingStart="16dp"
        android:text="@string/my_favorite"
        android:textColor="@color/colorDeepDarkGray"
        android:textSize="16sp"
        android:textStyle="bold"
        tools:ignore="RtlSymmetry" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="104dp">

        <RelativeLayout
            android:id="@+id/my_favorite_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:background="@color/colorWhite">

            <TextView
                android:id="@+id/my_favorite_marker_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:layout_marginStart="36dp"
                android:layout_marginTop="29dp"
                android:text="@string/favorite_address"
                android:textColor="@color/colorInfoTextColor"
                android:textSize="16sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/my_favorite_marker_modify_button"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginStart="4dp"
                android:layout_marginTop="30dp"
                android:layout_toEndOf="@id/my_favorite_marker_title"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_map_write" />

            <TextView
                android:id="@+id/my_favorite_marker_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/my_favorite_marker_title"
                android:layout_marginStart="36dp"
                android:text="@string/favorite_detail_address"
                android:textColor="@color/colorInfoTextColor"
                android:textSize="12sp"
                android:textStyle="normal" />

            <ImageView
                android:id="@+id/my_favorite_toggle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:background="@drawable/ic_favorite_star_on_t" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/my_favorite_content_modify"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:background="@color/colorWhite"
            android:gravity="center_vertical"
            android:visibility="invisible">

            <EditText
                android:id="@+id/my_favorite_modify_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="36dp"
                android:layout_toStartOf="@id/my_favorite_modify_button"
                android:hint="@string/favorite_address"
                android:maxLength="12"
                android:maxLines="1"
                android:textColor="@color/colorInfoTextColor"
                android:textSize="14sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/my_favorite_modify_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/my_favorite_modify_title"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="36dp"
                android:layout_toStartOf="@id/my_favorite_modify_button"
                android:hint="@string/favorite_detail_address"
                android:maxLength="24"
                android:maxLines="1"
                android:textColor="@color/colorInfoTextColor"
                android:textSize="12sp"
                android:textStyle="normal" />

            <Button
                android:id="@+id/my_favorite_modify_button"
                android:layout_width="64dp"
                android:layout_height="36dp"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="36dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/bg_frame_gray_rounded"
                android:text="@string/favorite_save" />

        </RelativeLayout>

    </FrameLayout>

</LinearLayout>
