<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mypage_login_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/molde_logo"
        android:layout_width="108dp"
        android:layout_height="108dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="112dp"
        android:src="@drawable/molde_logo" />

    <ImageView
        android:layout_width="108dp"
        android:layout_height="38dp"
        android:layout_below="@+id/molde_logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:src="@drawable/molde_title" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:background="@color/colorPrimary"
        android:gravity="center_horizontal">

        <!-- 구글 로그인 -->
        <RelativeLayout
            android:id="@+id/login_google_button"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="22dp"
            android:background="@drawable/bg_frame_rounded">

            <ImageView
                android:id="@+id/ic_google"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="22dp"
                android:src="@drawable/ic_login_google" />

            <TextView
                android:id="@+id/login_to_google"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/login_google"
                android:textSize="14sp" />

        </RelativeLayout>

        <!-- 페이스북 로그인 -->
        <RelativeLayout
            android:id="@+id/login_facebook_button"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_below="@+id/login_google_button"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/bg_frame_rounded">

            <com.facebook.login.widget.LoginButton
                android:id="@+id/in_facebook_login_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="12dp" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/bg_frame_rounded">

                <ImageView
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="22dp"
                    android:src="@drawable/ic_login_facebook" />

                <TextView
                    android:id="@+id/login_to_facebook"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/login_facebook"
                    android:textSize="14sp" />

            </FrameLayout>

        </RelativeLayout>

        <TextView
            android:id="@+id/skip_login_button"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_below="@+id/login_facebook_button"
            android:layout_marginEnd="19dp"
            android:layout_marginTop="9dp"
            android:layout_marginBottom="21dp"
            android:layout_alignParentEnd="true"
            android:background="@color/fui_transparent"
            android:text="@string/login_skip"
            android:textColor="@color/colorDefaultText" />

    </RelativeLayout>

</RelativeLayout>
